lab7/order.yaml
apiVersion: v1
kind: Pod
metadata:
  name: od-pod
  labels:
    category: order
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang5324/order
---
apiVersion: v1
kind: Service
metadata:
  name: od-svc
spec:
  selector:
    category: order
  ports:
  - port: 8080
