lab7/v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: v1-pod
  labels:
    app: v1
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang5324/app:v1
---
apiVersion: v1
kind: Service
metadata:
  name: v1-svc
spec:
  selector:
    app: v1
  ports:
  - port: 8080
