lab7/v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: v2-pod
  labels:
    app: v2
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang5324/app:v2
---
apiVersion: v1
kind: Service
metadata:
  name: v2-svc
spec:
  selector:
    app: v2
  ports:
  - port: 8080
